--- a/codigo-fonte/area-logada/home-gestor/home-gestor.html
+++ b/codigo-fonte/area-logada/home-gestor/home-gestor.html
@@ -18,6 +18,75 @@
         <li> <a href="../home-colaborador/home-colaborador.html">PÁGINA INICIAL</a></li>
         <li><a href="../sobre/sobre.html">SOBRE</a></li>
         <li><a href="../meus-registros/meus-registros.html">REGISTROS</a></li>
+        <li><a href="../../area-nao-logada/login/login.html">SAIR</a></li>
+    </ul>
+    <div class="global-container">
+        <div class="user-pic-container">
+            <div class="avatar-msg-container">
+                <!-- <img class="avatar-size" src="../../imagens/leonardo.png"> -->
+                <span class="default-text user-name">Olá, </span>
+            </div>
+            <img style="cursor: pointer" class="icon" id="gerarRelatorio" src="../../imagens/printer.svg">
+        </div>
+
+
+
+        <div class="chart-row-container">
+            <div class="grey-wrapper" style="width: 70%">
+                <canvas id="myChart"></canvas>
+            </div>
+            <div class="training-column-container">
+                <div>
+                    <div class="lighter-rectangle rectangle-text ">TOTAL DE REGISTROS</div>
+                    <div class="rectangle rectangle-text-total">0</div>
+                </div>
+
+                <h2>POR ANO</h2>
+
+                <div class="training-rectangle-container">
+                    <div class="ligther-rectangle-row rectangle-text ">2021</div>
+                    <div class="rectangle-row rectangle-text-2021">0</div>
+                </div>
+
+                <div class="training-rectangle-container">
+                    <div class="ligther-rectangle-row rectangle-text ">2022</div>
+                    <div class="rectangle-row rectangle-text-2022 ">0</div>
+                </div>
+
+                <div class="training-rectangle-container">
+                    <div class="ligther-rectangle-row rectangle-text ">2023</div>
+                    <div class="rectangle-row rectangle-text-2023 ">0</div>
+                </div>
+            </div>
+        </div>
+
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    </div>
+</body>
+
+
+</html>
+
+<!-- <!DOCTYPE html>
+<html lang="pt-br">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./home-gestor.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
+    <script src="home-gestor.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.5/xlsx.full.min.js"></script>
+    <title>MEUS REGISTROS</title>
+</head>
+
+<body>
+    <ul class="menu">
+        <li> <a href="../home-colaborador/home-colaborador.html">PÁGINA INICIAL</a></li>
+        <li><a href="../sobre/sobre.html">SOBRE</a></li>
+        <li><a href="../meus-registros/meus-registros.html">REGISTROS</a></li>
     </ul>
     <div class="global-container">
         <div class="user-pic-container">
@@ -66,4 +135,4 @@
 </body>
 
 
-</html>
+</html> -->
