--- a/codigo-fonte/area-logada/meus-registros/meus-registros.html
+++ b/codigo-fonte/area-logada/meus-registros/meus-registros.html
@@ -18,12 +18,13 @@
         <li> <a href="../home-colaborador/home-colaborador.html">PÁGINA INICIAL</a></li>
         <li><a href="../sobre/sobre.html">SOBRE</a></li>
         <li><a href="../meus-registros/meus-registros.html">REGISTROS</a></li>
+        <li><a href="../../area-nao-logada/login/login.html">SAIR</a></li>
     </ul>
     <div class="global-container">
         <div class="user-pic-container">
             <div class="avatar-msg-container">
-                <img class="avatar-size" src="../../imagens/leonardo.png">
-                <span class="default-text user-name">Olá, Leonardo</span>
+                <!--<img class="avatar-size" src="../../imagens/leonardo.png">-->
+                <span class="default-text user-name">Olá,</span>
             </div>
             <img style="cursor: pointer" class="icon" id="gerarRelatorio" src="../../imagens/printer.svg">
         </div>
@@ -31,7 +32,6 @@
             <div class="yellow-circle plus-sign">+</div>
             <span class="default-text"> NOVO REGISTRO</span>
         </a>
-
 
         <div class="chart-row-container">
             <div class="grey-wrapper" style="width: 70%">
@@ -65,6 +65,5 @@
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     </div>
 </body>
-
 
 </html>
