--- a/codigo-fonte/area-logada/home-colaborador/home-colaborador.html
+++ b/codigo-fonte/area-logada/home-colaborador/home-colaborador.html
@@ -18,6 +18,7 @@
             <li> <a href="../home-colaborador/home-colaborador.html">PÁGINA INICIAL</a></li>
             <li><a href="../sobre/sobre.html">SOBRE</a></li>
             <li><a href="../meus-registros/meus-registros.html">REGISTROS</a></li>
+            <li><a href="../../area-nao-logada/login/login.html">SAIR</a></li>
         </ul>
     </header>
 
