--- a/codigo-fonte/area-logada/home-colaborador/home-colaborador.html
+++ b/codigo-fonte/area-logada/home-colaborador/home-colaborador.html
@@ -24,7 +24,7 @@
 
     <body>
         <section class="container">
-            <img src="../../imagens/imagem.teste.jpg">
+            <img src="../../imagens/principal.png">
             <div class="titulo"><b>Qualifique</b></div>
             <div class="subtitulo"><b>Sua plataforma de controle de horas de cursos e treinamentos</b></div>
             <button class="button"> <a href="../sobre/sobre.html"><b>SOBRE</b></a></button>
