--- a/codigo-fonte/area-nao-logada/login/login.html
+++ b/codigo-fonte/area-nao-logada/login/login.html
@@ -39,7 +39,7 @@
         </div>
     </div>
     <script>
-        \\createUsers();
+        //createUsers();
         limpaUsuarioLogado();
     </script>
 </body>
