--- a/codigo-fonte/area-logada/sobre/sobre.html
+++ b/codigo-fonte/area-logada/sobre/sobre.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="./sobre.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;500&display=swap" rel="stylesheet">
+
     <title>SOBRE</title>
 </head>
 <body>
@@ -34,4 +35,3 @@
     </div>
 </body>
 </html>
- 
