--- a/codigo-fonte/area-logada/home-colaborador/home-colaborador.html
+++ b/codigo-fonte/area-logada/home-colaborador/home-colaborador.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="./home-colaborador.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;500&display=swap" rel="stylesheet">
         <title>PÁGINA PRINCIPAL</title>
         <link rel="stylesheet" href="home-colaborador.css">
     </head>
@@ -25,9 +25,9 @@
     <body>
         <section class="container">
             <img src="../../imagens/principal.png">
-            <div class="titulo"><b>Qualifique</b></div>
-            <div class="subtitulo"><b>Sua plataforma de controle de horas de cursos e treinamentos</b></div>
-            <button class="button"> <a href="../sobre/sobre.html"><b>SOBRE</b></a></button>
+            <div class="titulo">Qualifique</div>
+            <div class="subtitulo">Sua plataforma de controle de horas de cursos e treinamentos</div>
+            <button class="button"> <a href="../sobre/sobre.html">SOBRE</a></button>
              
         </section>
     </body>
